#    git diff <cluster commit id> Changelog
# Также стоит сравнить версии в следующих файлах:
#    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
#    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.

* shakurov: Изменилась логика проверки прав в мутации создания кипарисных узлов. Обновлять через снепшот.
* babenko: Добавлены поколоночные ACL, обновлять мастера через снепшот.
* babenko: Еще одно исправление в проверке прав создания реплик, обновлять мастера через снепшот.
* babenko: Исправлена проверка прав создания реплик, обновлять мастера через снепшот.
* shakurov: В коммите 796a8f8988 изменилась семантика одной из мутаций, обновлять мастера через снапшот.
* levysotsky: Добавлено новое право manage, мастеров обновлять перед шедулерами и контроллер агентами.
* savrus: Вычищены dynamic tables attributes из статических таблиц, обновлять мастеров через снапшот.
* shakurov: Восстановлена совместимость "новый мастер - старая нода", сломанная коммитом 3933bd84f9.
* babenko: Исправлено удаление атрибута внутри транзакции (YT-10192), изменилась семантика, обновлять мастеров через снепшот.
* savrus: Поменялись проверки прав для доступа к tablet action и tablet cell bundle, обновлять мастеров через снапшот.
* savrus: Изменился протокол добавления нового мастер-целла, обновлять мастеров через снапшот.
* savrus: Добавились новые мутации при подсчёте статистик таблет-целлов, обновлять мастеров через снапшот.
* babenko: Изменилась семантика проверки прав на реплики, обновлять мастеров через снепшот.
* max42: Обновить архив операций до версии 29 (колонка annotations).
* savrus: Поменялся формат снапшотов таблет-целлов и протокол общения между мастерами. Нужно проследить что нет декоммиссированных таблет-целлов и обновиться через снапшот.